fixid alignment issues in chat section

--- a/src/components/common/chatSearch/ChatSearch.css
+++ b/src/components/common/chatSearch/ChatSearch.css
@@ -18,7 +18,7 @@
 
     resize: none;
 
-    max-height: 140px;
+    max-height: 75px;
     padding-left: 15px;
     padding-top: 5px;
     padding-bottom: 5px;
